[gd_scene load_steps=2 format=3]
[ext_resource type="Script" path="res://scripts/end_screen.gd" id="1"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
color = Color(0.1, 0.05, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_left = 0.5
anchors_top = 0.5
anchors_right = 0.5
anchors_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score: 0"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="EmbarrassmentLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Embarrassment: 0%"
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="SocialCreditLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Social Credit: 0/100"
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "RESTART"
theme_override_font_sizes/font_size = 24

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "MAIN MENU"
theme_override_font_sizes/font_size = 24

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_pressed"]
